--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <p class="project-subtext">A sleek and modern looking landing page for a media agency.</p>
             <hr>
             <p class="project-subtext"><a class="project-link" href="https://github.com/rishiksuvarna/Landing-page-project">View here</a></p>
+            <hr class="link-hr">
+            <p class="project-subtext"><a class="project-link" href="https://timely-palmier-14c5b7.netlify.app">See live</a></p>
         </div>      
         <div class="project-card">
             <img class="project-image" src="src/images/sudoku-760x380.jpg" alt="Website Image">
