--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <hr>
             <p class="project-subtext"><a class="project-link" href="https://github.com/rishiksuvarna/Landing-page-project">View here</a></p>
             <hr class="link-hr">
-            <p class="project-subtext"><a class="project-link" href="https://timely-palmier-14c5b7.netlify.app">See live</a></p>
+            <p class="project-subtext"><a class="project-link" target="_blank" href="https://timely-palmier-14c5b7.netlify.app">See live</a></p>
         </div>      
         <div class="project-card">
             <img class="project-image" src="src/images/sudoku-760x380.jpg" alt="Website Image">
